--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,17 @@ readme = "README.md"
 license = "MIT"
 license-files = ["LICENSE"]
 version = "0.1.0"
+dependencies = [
+    "openai",
+    "qdrant-client",
+    "pyyaml",
+    "dacite",
+    "alembic",
+    "sqlalchemy",
+    "fastapi",
+    "uvicorn"
+
+]
 
 [project.scripts]
 pdf_tutor = "src.server:run_wsgi"
